# c2_coursework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  environment.yml
CSD3_results/14032026_cache_blocked_1_block_size_sweep/: cache_blocked_1_block_size_sweep_n2000.csv  cache_blocked_1_block_size_sweep_n2000_SUMMARY.csv  single_thread_block_size_sweep.slurm
CSD3_results/14032026_fixed_size_comparison_n1000/: single_thread_fixed_size_comparison.slurm
CSD3_results/14032026_single_thread_scaling_all_methods/: single_thread_scaling_all_methods.slurm
build_openmp/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build_openmp/performance_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp/run/: CTestTestfile.cmake  Makefile  cmake_install.cmake  run_cholesky
build_openmp/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp_local/: CMakeCache.txt
docs/run_guides/: README_1_single_run.md  README_2_fixed_size_comparison.md  README_3_one_method_multiple_sizes.md  README_4_all_methods_multiple_sizes.md  README_5_block_size_sweep.md  README_6_openMP.md
example/: CMakeLists.txt  example.cpp  example_cholesky.cpp  simple_library_usage.cpp
include/: cholesky_decomposition.h  mphil_dis_cholesky.h
performance_tests/: 01_perf_method_compare.cpp  02_perf_thread_count_sweep.cpp  03_perf_block_size_sweep.cpp  04_perf_matrix_size_sweep.cpp  CMakeLists.txt  perf_block_size_sweep.cpp  perf_fixed_size_comparison.cpp  perf_helpers.cpp  perf_helpers.h  perf_modes.h  perf_scaling.cpp  perf_time.cpp  runtime_cholesky.cpp  runtime_cholesky.h
plot/: cholesky_plotter.py  plot_block_size_metrics.py  plot_comparison_metrics.py  plot_metrics.py  plot_openmp_thread_count_metrics.py  pythonStyle.mplstyle
results/Archive/results_local/: 15032026_matrix_generator_comparison_n1000.csv  15032026_openmp_fixed_size_comparison_n2000.csv  15032026_openmp_fixed_size_comparison_n5000.csv  15032026openmp_fixed_size_comparison_n10000.csv
results/raw/: baseline_matrix_size_graph.csv  baseline_n1000.csv  block_size_sweep_n2000.csv  cholesky_blocked_tile_kernels_unrolled_scaling_temp.csv  fixed_size_comparison_n1000_raw.csv  fixed_size_comparison_n16_raw.csv  fixed_size_comparison_n2000_raw.csv  fixed_size_comparison_n5000.csv  openmp_fixed_size_comparison_n1000.csv  openmp_fixed_size_comparison_n2000.csv  openmp_fixed_size_comparison_n5000.csv  openmp_methods_graph.csv  openmp_methods_n10000.csv  single_run_baseline_n1000.csv  single_run_baseline_n512.csv  single_run_cache_blocked_1_n1000.csv  single_run_cache_blocked_2_n1000.csv  single_run_contiguous_access_n1000.csv  single_run_lower_triangle_n1000.csv  single_run_upper_triangle_n1000.csv
run/: CMakeLists.txt  compare_matrix_generators.cpp  run_cholesky.cpp
run_guides/: block_size_sweep.md  matrix_size_sweep.md  method_compare.md  thread_count_sweep.md
scripts/Both/: runtime_matrix_size_single_thread.slurm
scripts/openmp/: openmp_block_size_sweep.slurm  openmp_fixed_runs.slurm  openmp_matrix_size_sweep.slurm  openmp_thread_count_sweep.slurm
scripts/sh_scripts/: build.sh  build_compiler_optimisations.sh  build_csd3.sh  build_openmp.sh  common_run_config.sh  run_all_methods_graph.sh  run_block_size_sweep.sh  run_example.sh  run_fixed_size_comparison.sh  run_matrix_generator_comparison.sh  run_matrix_size_graph.sh  run_openmp_block_size_sweep.sh  run_openmp_fixed_size_comparison.sh  run_openmp_methods_graph.sh  run_openmp_thread_count_sweep.sh  run_single_matrix.sh
scripts/single_thread/: single_thread_block_size_sweep.slurm  single_thread_fixed_runs.slurm  single_thread_matrix_size_sweep.slurm
scripts/slurm_scripts/: openmp_block_size_sweep.slurm  openmp_fixed_size_comparison.slurm  openmp_large_n_csvs.slurm  openmp_scaling_with_baseline.slurm  openmp_thread_count_sweep.slurm  run_all_methods_graph.slurm  run_compiler_optimisations.slurm  run_fixed_size_comparison.slurm  run_matrix_size_graph.slurm  run_single_matrix.slurm  single_thread_block_size_sweep.slurm  single_thread_fixed_size_comparison.slurm  single_thread_large_n_csvs.slurm  single_thread_scaling_all_methods.slurm  single_thread_single_method_csv.slurm
src/: 00_cholesky_baseline.cpp  01_cholesky_lower_triangle.cpp  02_cholesky_upper_triangle.cpp  03_cholesky_contiguous_access.cpp  04_cholesky_blocked_tile_kernels.cpp  04_cholesky_cache_blocked_1.cpp  05_cholesky_blocked_tile_kernels_unrolled.cpp  05_cholesky_cache_blocked_2.cpp  06_cholesky_openmp_1.cpp  06_cholesky_openmp_row_parallel_unblocked.cpp  07_cholesky_openmp_2.cpp  07_cholesky_openmp_tile_parallel_blocked.cpp  08_cholesky_openmp_3.cpp  08_cholesky_openmp_block_row_parallel.cpp  09_cholesky_openmp_4.cpp  09_cholesky_openmp_tile_list_parallel.cpp  10_cholesky_openmp_task_dag_blocked.cpp  CMakeLists.txt  cholesky_access_pattern_aware.cpp  cholesky_baseline.cpp  cholesky_blocked_vectorised.cpp  cholesky_cache_blocked.cpp  cholesky_decomposition.cpp  cholesky_guard.h  cholesky_helpers.h  cholesky_inline_mirror.cpp  cholesky_loop_cleanup.cpp  cholesky_lower_triangle_only.cpp  cholesky_openmp_1.cpp  cholesky_openmp_2.cpp  cholesky_openmp_3.cpp  cholesky_vectorisation.cpp  cholesky_versions.cpp  cholesky_versions.h  mphil_dis_cholesky.cpp
test/: CMakeLists.txt  test_cli_gtest.cpp  test_correctness_gtest.cpp  test_coursework_brief_matrix.cpp  test_csv_contract_gtest.cpp  test_diagonal_matrix.cpp  test_generated_spd.cpp  test_helpers.cpp  test_helpers.h  test_identity.cpp  test_integration_gtest.cpp  test_invalid_input.cpp  test_logdet.cpp  test_matrix_generation.cpp  test_openmp_gtest.cpp  test_perf_time_output.cpp  test_plot_gtest.cpp  test_reconstruction.cpp  test_regression_gtest.cpp  test_repeatability.cpp  test_runtime_name_parsing.cpp  test_small_case.cpp  test_suite_helpers.cpp  test_suite_helpers.h  test_unit_gtest.cpp  test_version_correctness.cpp
utils/: CMakeLists.txt  matrix.cpp  matrix.h  timer.cpp  timer.h
(+133 files in other folders)
